--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -2,7 +2,7 @@
     <div class="slider">
         {% for gallery in page.gallery %}
             {% for image in gallery.images %}
-                <div style="background-image: url({{ image.filename | prepend: '/media/img/' | prepend: site.baseurl }})"><img src="{{ image.filename | prepend: '/media/img/' | prepend: site.baseurl }}" alt="{{ image.alttext }}"></div>
+                <div style="background-image: url({{ image.filename | prepend: 'media/img/' | prepend: site.baseurl }})"><img src="{{ image.filename | prepend: 'media/img/' | prepend: site.baseurl }}" alt="{{ image.alttext }}"></div>
             {% endfor %}
         {% endfor %}
     </div>
